--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       rel="shortcut icon"
       href="<%= webpackConfig.output.publicPath %>favicon.ico"
     />
+    <link rel="manifest" href="<%= webpackConfig.output.publicPath %>favicons/manifest.json">
     <title><%= webpackConfig.name %></title>
 <!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"-->
 <!--          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="-->
