--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       rel="shortcut icon"
       href="<%= webpackConfig.output.publicPath %>favicon.ico"
     />
+    <link rel="icon" type="image/png" sizes="16x16"
+          href="<%= webpackConfig.output.publicPath %>favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="<%= webpackConfig.output.publicPath %>favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96"
+          href="<%= webpackConfig.output.publicPath %>favicons/favicon-96x96.png">
     <link rel="manifest" href="<%= webpackConfig.output.publicPath %>favicons/manifest.json">
     <title><%= webpackConfig.name %></title>
 <!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"-->
