--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link
       rel="shortcut icon"
       href="<%= webpackConfig.output.publicPath %>favicon.ico"
-    />
-    <link rel="icon" type="image/png" sizes="16x16"
-          href="<%= webpackConfig.output.publicPath %>favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="<%= webpackConfig.output.publicPath %>favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96"
-          href="<%= webpackConfig.output.publicPath %>favicons/favicon-96x96.png">
-    <link rel="manifest" href="<%= webpackConfig.output.publicPath %>favicons/manifest.json">
-    <title><%= webpackConfig.name %></title>
-<!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"-->
-<!--          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="-->
-<!--          crossorigin=""/>-->
-    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-            crossorigin=""></script>
-  </head>
-  <body>
-    <!-- This is where our app will be mounted. -->
-    <div id="app"></div>
+  />
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="<%= webpackConfig.output.publicPath %>favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+        href="<%= webpackConfig.output.publicPath %>favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96"
+        href="<%= webpackConfig.output.publicPath %>favicons/favicon-96x96.png">
+  <link rel="manifest" href="<%= webpackConfig.output.publicPath %>favicons/manifest.json">
+  <title><%= webpackConfig.name %></title>
+  <!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"-->
+  <!--          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="-->
+  <!--          crossorigin=""/>-->
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+          integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+          crossorigin=""></script>
+</head>
+<body>
+<!-- This is where our app will be mounted. -->
+<div id="app"></div>
 
-    <!-- Built files will be auto injected here. -->
-  </body>
+<!-- Built files will be auto injected here. -->
+</body>
 </html>
